<resources>
    <string name="app_name">PacmanGreen</string>
    <string name="MyName">Juan Sebastian Henrnandez Reyes</string>
    <string name="Texto1">Inicia una nueva aventura con PacmanGreen y descubre una nueva forma de ver el mundo.</string>
    <string name="btnComenzar">Comienza</string>
    <string name="btnRegistrar">Registrate</string>
    <string name="TxtLogin">La aventura esta por iniciar, porfavor inicia sesion</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRecuperar">Recupera tu contraseña</string>
    <string name="btnGoogle">Ingresa con Google</string>
    <string name="txtRegistrate">No tienes cuenta?</string>
    <string name="tienda_virtual">Tienda_virtual</string>
    <string name="bienvenid">Bienvenid@</string>
    <string name="inicio">Inicio</string>
    <string name="productos">productos</string>
    <string name="open_drawer">Menu abierto</string>
    <string name="cloce_drawer">Menu cerrado\n\n</string>
    <string name="carrito">CARRITO\n</string>
    <string name="perfil">PERFIL\n</string>
    <string name="categorias">CATEGORIAS\n</string>
    <string name="editar_perfil">DEPORTES\n</string>
    <string name="historial">historial</string>
    <string name="analisis">\n</string>
</resources>
