<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/inicioFragment"
            android:title="@string/inicio" />
        <item
            android:id="@+id/tvHistorial"
            android:title="@string/historial" />
        <item
            android:id="@+id/perfilFragment"
            android:title="@string/perfil" />
        <item
            android:id="@+id/analisisFragment"
            android:title="@string/analisis" />
<!--
        <item
            android:id="@+id/productosFragment"
            android:title="@string/productos" />
        <item
            android:id="@+id/carritoFragment"
            android:title="@string/carrito" />

        <item
            android:id="@+id/CategoriasFragment"
            android:title="@string/categorias" />
        <item
            android:id="@+id/electronicaFragment"
            android:title="• Para el Hogar" />
        <item
            android:id="@+id/ropaFragment"
            android:title="• Para Trabajar" />
        <item
            android:id="@+id/hogarFragment"
            android:title="• Para Descansar" />
        <item
            android:id="@+id/deportesFragment"
            android:title="• Para Entrenar" />
        <item
            android:id="@+id/accesoriosFragment"
            android:title="• Para Personal" />
        <item
            android:id="@+id/editarPerfilFragment"
            android:title="@string/editar_perfil" /> -->
    </group>
</menu>