<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pg_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Morado_parcial"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/icon_pg2"
        android:layout_width="180dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        app:srcCompat="@drawable/parcial_logo" />

    <TextView
        android:id="@+id/nameApp_pg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/Blanco"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_pg2"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="317dp"
        android:layout_height="87dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Texto1"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameApp_pg2"
        app:layout_constraintVertical_bias="0.117" />

    <Button
        android:id="@+id/btnComienza_pg2"
        android:layout_width="231dp"
        android:layout_height="54dp"
        android:background="@drawable/boton_redondeado_parcial"

        android:text="@string/btnComenzar"
        android:textColor="@color/Blanco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.215"
        app:rippleColor="@color/Blanco" />

    <TextView
        android:id="@+id/textoregistar_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistrar"
        android:textColor="@color/Blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnComienza_pg2"
        app:layout_constraintVertical_bias="0.294" />

</androidx.constraintlayout.widget.ConstraintLayout>